# renquant-common

./: CLAUDE.md  Makefile  README.md  pyproject.toml  renquant_repo.yml
.github/workflows/: ci.yml
doc/progress/: 2026-07-04-market-calendar.md  2026-07-04-notify-canonical-sender.md  2026-07-04-py39-calendar-pin.md  2026-07-10-always-open-calendar-mode.md  2026-07-10-always-open-utc-semantics-fix.md  2026-07-10-net-cost-primitives-fingerprint.md  2026-07-10-net-cost-primitives.md  2026-07-11-pair-slug-symbol-helper.md  2026-07-13-decision-ledger-pytest-guard.md  2026-07-13-v003-decision-ledger-to-common.md  2026-07-18-bundle-contract-vectors-phase3b.md  2026-07-21-walk-forward-fold-selection-contract.md  2026-07-22-training-freshness-contract-ac7.md
src/renquant_common/: __init__.py  calibrator_quality.py  config_consistency.py  cost_model.py  decision_ledger.py  hmm_regime_labels.py  hurst.py  market_calendar.py  model_fingerprint.py  net_safety.py  notify.py  pair_slug.py  pipeline.py  purged_cv.py  regime_labels.py  risk_metrics.py  row_coverage.py  stats.py  training_freshness.py  training_runs.py  walk_forward_fold_selection.py  walk_forward_splits.py
src/renquant_common/contracts/: __init__.py  bundle_contract.py  regime.py  schemas.py  scorer.py
src/renquant_common/metrics/: __init__.py  block_bootstrap.py  deflated_sharpe.py  hac_se.py  pbo.py  perf_summary.py
src/renquant_common/registry/: __init__.py  mlflow_registry.py
tests/: test_api_snapshot.py  test_bundle_contract_vectors.py  test_c27_shared_lift.py  test_cost_model.py  test_decision_ledger.py  test_hmm_regime_golden_windows.py  test_hurst.py  test_import_boundaries.py  test_market_calendar.py  test_model_fingerprint.py  test_model_fingerprint_legacy_shims.py  test_model_fingerprint_stage2_fields.py  test_net_safety.py  test_no_raw_regime_strings.py  test_notify.py  test_pair_slug.py  test_pipeline.py  test_purged_cv.py  test_regime.py  test_regime_labels.py  test_registry_lift.py  test_risk_metrics.py  test_risk_metrics_extra.py  test_schemas.py  test_scorer.py  test_stats.py  test_training_freshness.py  test_training_runs.py  test_walk_forward_fold_selection.py
tests/api_snapshot/: public_api.json
tests/data/: _regen_spy_synth.py  spy_synth.parquet
tests/metrics/: test_metrics.py
