[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renquant-common"
# 0.12.0: adds ``renquant_common.cost_model`` (crypto RFC D-C8a — generic
# net-of-cost primitives + canonical CostModelSpec serialization/identity).
# Version-ADDRESSABLE contract: consumers that require the cost primitive
# pin ``renquant-common>=0.12.0`` and fail closed below it (Codex review,
# common#28). 0.11.0 is claimed by the open #27 (ALWAYS_OPEN calendar);
# whichever of #27/#28 lands second rebases its version above the other.
version = "0.12.0"
description = "Shared RenQuant contracts and pipeline primitives."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "RenQuant"}]
dependencies = [
  "arch>=6.3",
  "numpy>=1.24",
  "pandas>=2.0",
  # Public API includes ``market_calendar`` (campaign B5) — the canonical NYSE
  # session calendar every repo imports instead of hand-copying. The import
  # inside the module stays lazy and raises CalendarUnavailableError
  # (fail-closed) when absent, but it is a real dependency of the public API.
  "pandas_market_calendars>=4,<5",
  # Public API includes ``hmm_regime_labels.compute_hmm_regime_labels()`` which
  # reads parquet via ``pd.read_parquet``. pandas does not bundle an engine,
  # so we list one explicitly — otherwise consumers + CI fail with
  # ``ImportError: Unable to find a usable engine``.
  "pyarrow>=14.0",
  "pydantic>=2.0,<3.0",
  "scipy>=1.10",
  "statsmodels>=0.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
