[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renquant-common"
# 0.13.0: adds ``renquant_common.pair_slug`` (crypto RFC D-C1, the other
# half alongside #27's ALWAYS_OPEN calendar mode — the canonical
# pair/slug symbol-normalization primitive renquant-base-data#41's local
# stand-in exists to repoint onto). 0.12.0 was #28 (net-cost primitives),
# merged first; this PR rebases its version above it (same
# collision-handling convention #27/#28 already used).
version = "0.13.0"
description = "Shared RenQuant contracts and pipeline primitives."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "RenQuant"}]
dependencies = [
  "arch>=6.3",
  "numpy>=1.24",
  "pandas>=2.0",
  # Public API includes ``market_calendar`` (campaign B5) — the canonical NYSE
  # session calendar every repo imports instead of hand-copying. The import
  # inside the module stays lazy and raises CalendarUnavailableError
  # (fail-closed) when absent, but it is a real dependency of the public API.
  "pandas_market_calendars>=4,<5",
  # Public API includes ``hmm_regime_labels.compute_hmm_regime_labels()`` which
  # reads parquet via ``pd.read_parquet``. pandas does not bundle an engine,
  # so we list one explicitly — otherwise consumers + CI fail with
  # ``ImportError: Unable to find a usable engine``.
  "pyarrow>=14.0",
  "pydantic>=2.0,<3.0",
  "scipy>=1.10",
  "statsmodels>=0.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
