[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renquant-common"
# 0.15.0 (additive): adds ``renquant_common.walk_forward_fold_selection`` —
# the canonical PIT fold-eligibility/selection contract mirrored from
# ``WalkForwardModelLoader.entry_as_of`` (RenQuant
# ``backtesting/renquant_104/kernel/walk_forward/loader.py``): closes a
# Codex review finding on renquant-model PR #64, where a G4 walkforward-sim
# evidence extraction script had reimplemented this date arithmetic using
# calendar-day ``timedelta`` and no ``effective_train_cutoff_date`` support,
# silently diverging from the real (business-day, effective-cutoff-aware)
# loader semantics. No root-export change (submodule-only, like
# ``model_fingerprint``); snapshot version updated in the same PR.
# 0.14.0 (additive): adds ``renquant_common.contracts.bundle_contract`` —
# the canonical home of the GOAL-5 AC4 serving-pair contract fixture
# vectors (RFC RenQuant#492 §2.5: "a contract fixture in renquant-common
# pins the verdict semantics both sides test against"; promoted from
# renquant-pipeline#206). No root-export change; snapshot version updated
# in the same PR. 0.13.0 added ``renquant_common.pair_slug`` (crypto RFC
# D-C1).
version = "0.15.0"
description = "Shared RenQuant contracts and pipeline primitives."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "RenQuant"}]
dependencies = [
  "arch>=6.3",
  "numpy>=1.24",
  "pandas>=2.0",
  # Public API includes ``market_calendar`` (campaign B5) — the canonical NYSE
  # session calendar every repo imports instead of hand-copying. The import
  # inside the module stays lazy and raises CalendarUnavailableError
  # (fail-closed) when absent, but it is a real dependency of the public API.
  "pandas_market_calendars>=4,<5",
  # Public API includes ``hmm_regime_labels.compute_hmm_regime_labels()`` which
  # reads parquet via ``pd.read_parquet``. pandas does not bundle an engine,
  # so we list one explicitly — otherwise consumers + CI fail with
  # ``ImportError: Unable to find a usable engine``.
  "pyarrow>=14.0",
  "pydantic>=2.0,<3.0",
  "scipy>=1.10",
  "statsmodels>=0.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the typing marker and the bundle-contract fixture vectors (RFC
# RenQuant#492 §2.5) inside wheels; editable/path installs see them on
# the filesystem regardless.
renquant_common = ["py.typed", "contracts/bundle_contract_vectors.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
